--- a/airline-booking-app/src/pages/Homepage.css
+++ b/airline-booking-app/src/pages/Homepage.css
@@ -5,3 +5,12 @@
     height: 100%;
     width: 100%;
 }
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
+
+.title {
+    font-weight: 700;
+    font-size: 2.5rem;
+    /* Adjust the size as needed */
+    color: #ffffff;
+    /* Adjust the color as needed */
+}
