--- a/airline-booking-app/src/pages/Homepage.css
+++ b/airline-booking-app/src/pages/Homepage.css
@@ -1,16 +1,20 @@
 .homepage {
-    background-image: url('../assets/images/homepage_img.webp');
-    background-size: cover;
-    background-position: center;
     height: 100%;
     width: 100%;
 }
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
 
 .title {
-    font-weight: 700;
+    font-weight: 300;
     font-size: 2.5rem;
     /* Adjust the size as needed */
     color: #ffffff;
     /* Adjust the color as needed */
+}
+.bg-image {
+    background-image: url('../assets/images/homepage_img.webp');
+    background-size: cover;
+    background-position: center;
+    height: 100%;
+    width: 100%;
 }
