--- a/airline-booking-app/src/cards/Seat.css
+++ b/airline-booking-app/src/cards/Seat.css
@@ -39,3 +39,15 @@
     color: white;
     /* Darker background color for selected seats on hover */
 }
+.blocked {
+    background-color: #343434;
+    color: #a1a1a1;
+    box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
+}
+
+.blocked:hover {
+    background-color: #343434;
+    color: #a1a1a1;
+    box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
+    cursor: not-allowed;
+}
